@@ -1,8 +1,7 @@
 package com.example.tes24.security.config;
 
 import com.example.tes24.properties.AllowedUrlProperties;
-import com.example.tes24.security.LoginEntryPoint;
-import com.example.tes24.security.filter.ExclusiveFilter;
+import com.example.tes24.security.filter.AnonymousFilter;
 import com.example.tes24.security.filter.JwtAuthenticationFilter;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -21,30 +20,35 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import java.time.Duration;
-import java.util.Collections;
-import java.util.List;
+import java.util.Arrays;
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
     private final String[] allowedUrls;
     private final String[] allowedPatterns;
+    private final String[] anonymous;
 
     public SecurityConfig(AllowedUrlProperties allowedUrlProperties) {
         Assert.notNull(allowedUrlProperties, "allowedUrlProperties must not be null");
         Assert.notNull(allowedUrlProperties.getUrls(), "urls must not be null");
         Assert.notNull(allowedUrlProperties.getPatterns(), "patterns must not be null");
+        Assert.notNull(allowedUrlProperties.getAnonymous(), "anonymous must not be null");
 
         this.allowedUrls = allowedUrlProperties.getUrls().toArray(new String[0]);
         this.allowedPatterns = allowedUrlProperties.getPatterns().toArray(new String[0]);
+        this.anonymous = allowedUrlProperties.getAnonymous().toArray(new String[0]);
     }
 
 
     @Bean
     public CorsConfiguration corsConfiguration() {
         CorsConfiguration corsConfiguration = new CorsConfiguration();
-        corsConfiguration.setAllowedOrigins(Collections.singletonList("*"));
-        corsConfiguration.setAllowedMethods(List.of("OPTIONS", "GET", "POST", "PATCH", "DELETE"));
+//        corsConfiguration.setAllowedOrigins(List.of("http://localhost:3000", "http://70.12.245.30:3000"));
+//        corsConfiguration.setAllowedMethods(List.of("OPTIONS", "GET", "POST", "PATCH", "PUT", "DELETE"));
+        corsConfiguration.setAllowedOrigins(Arrays.asList("*"));
+        corsConfiguration.setAllowedMethods(Arrays.asList("OPTIONS", "GET", "POST", "PATCH", "PUT", "DELETE"));
+        corsConfiguration.setAllowedHeaders(Arrays.asList("*"));
         corsConfiguration.setMaxAge(Duration.ofMinutes(30));
         return corsConfiguration;
     }
@@ -66,21 +70,21 @@ public class SecurityConfig {
             HttpSecurity httpSecurity,
             CorsConfigurationSource corsConfigurationSource,
             AuthenticationEntryPoint loginEntryPoint,
-            ExclusiveFilter exclusiveFilter,
+            AnonymousFilter anonymousFilter,
             JwtAuthenticationFilter jwtAuthenticationFilter) throws Exception {
 
         return httpSecurity
                 .csrf(AbstractHttpConfigurer::disable)
                 .cors(cors -> cors.configurationSource(corsConfigurationSource))
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .addFilterBefore(exclusiveFilter, UsernamePasswordAuthenticationFilter.class)
+                .addFilterBefore(anonymousFilter, UsernamePasswordAuthenticationFilter.class)
                 .addFilterAt(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
                 .authorizeHttpRequests(requests -> requests
                         .requestMatchers(allowedUrls).permitAll()
                         .requestMatchers(allowedPatterns).permitAll()
-                        .requestMatchers("/member/signup", "/member/login").anonymous()
+                        .requestMatchers(anonymous).anonymous()
                         .anyRequest().authenticated())
-                .exceptionHandling(customizer -> customizer.authenticationEntryPoint(loginEntryPoint))
+//                .exceptionHandling(customizer -> customizer.authenticationEntryPoint(loginEntryPoint))
                 .build();
     }
 }
